--- a/source/stylesheets/maintenance.sass
+++ b/source/stylesheets/maintenance.sass
@@ -33,9 +33,9 @@
 
         svg
           display: block
-          fill: $text-color
+          fill: var(--text-color)
           height: 26px
           width: 26px
 
         &:hover svg
-          fill: $link-hover-color
+          fill: var(--link-hover-color)
