--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -11,7 +11,7 @@
   text-align: center
 
 .cart-items
-  border-top: 1px solid $text-color
+  border-top: 1px solid var(--text-color)
   list-style: none
   margin: 0 auto
   max-width: 700px
@@ -21,7 +21,7 @@
 .cart-item
   +flexbox
   +align-items(center)
-  border-bottom: 1px solid $text-color
+  border-bottom: 1px solid var(--text-color)
   padding: 40px 0
 
   @media screen and (max-width: $break-small)
@@ -37,10 +37,10 @@
 
 .cart-remove-icon
   display: block
-  fill: $text-color
+  fill: var(--text-color)
 
   .cart-item-remove:hover &, .cart-item-remove:focus &
-    fill: $link-hover-color
+    fill: var(--link-hover-color)
 
 .cart-item-image
   background-position: 50% 50%
@@ -95,14 +95,14 @@
     margin-left: 0
 
   input
-    border-bottom: 1px solid $text-color
+    border-bottom: 1px solid var(--text-color)
     padding: 8px 0
     text-align: center
     width: 100%
 
     &:active, &:focus
-      background-color: $accent-color
-      border-color: $link-hover-color
+      background-color: var(--accent-background-color)
+      border-color: var(--link-hover-color)
 
 .cart-footer
   margin: 50px auto 0
@@ -138,4 +138,4 @@ a.button.continue-shopping
 
   &:active, &:focus, &:hover
     border-color: transparent
-    color: $text-color
+    color: var(--text-color)
