--- a/source/stylesheets/contact.sass
+++ b/source/stylesheets/contact.sass
@@ -21,7 +21,7 @@
     margin-bottom: 4px
 
   input, textarea
-    border: 1px solid $text-color
+    border: 1px solid var(--text-color)
     height: 58px
     padding: 12px
     position: relative
