--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -1,96 +1,89 @@
-
-
 .home-welcome
-  color: $welcome-header-text-color
-  margin-bottom: 100px
-  padding: 0 20px
+  display: grid
+  border-radius: var(--border-radius)
+  color: var(--welcome-header-text-color)
   position: relative
+  align-items: center
+  margin-bottom: 80px
+
+  &.stacked
+    grid-template-rows: 1fr
+
+    .welcome-image
+      grid-area: 1 / 1
+      z-index: 1
+
+    .welcome-message
+      grid-area: 1 / 1
+      z-index: 2
 
   @media screen and (max-width: $break-small)
     margin-bottom: 50px
-    padding: 0
 
 .welcome-message
-  font-size: 50px
+  font-size: 3em
   text-align: center
+  padding: 0 var(--spacing-unit)
   width: 100%
 
-  &.with-image
-    +transform(translateX(-50%) translateY(-50%))
-    left: 50%
-    position: absolute
-    top: 50%
-    width: 75%
-
   @media screen and (max-width: $break-small)
-    font-size: 25px
-    line-height: 30px
+    font-size: 1.5em
 
 .welcome-image
+  border-radius: var(--border-radius)
   display: block
   margin: 0 auto
   width: 100%
 
 .featured-category
-  +flexbox
-  background-color: $accent-color
-  margin-bottom: 50px
-  padding: 80px
+  display: flex
+  background-color: var(--accent-background-color)
+  margin-bottom: 40px
+  padding: 60px
+  gap: 60px
 
   @media screen and (max-width: $break-small)
-    +flex-direction(column)
+    flex-direction: column
     height: auto
-    padding: 50px
     max-height: none
+    padding: 30px
+    gap: 30px
 
 .featured-category-info
-  +flexbox
-  +align-items(center)
-  +flex-direction(column)
-  +justify-content(center)
-  +flex(1)
-  font-size: 25px
-  padding-right: 50px
+  display: flex
+  align-items: center
+  flex-direction: column
+  justify-content: center
+  flex: 1
+  font-size: 1.7em
+  gap: 50px
 
-  @media screen and (max-width: $break-small)
-    padding-bottom: 0
-    padding-right: 0
-
-.featured-category-title
-  font-size: 15px
-  line-height: 20px
-
-.featured-category-name
-  line-height: 50px
-  margin-bottom: 30px
-
-.featured-category-button
-  font-size: 16px
+a.featured-category-button
+  font-size: 1rem
   max-width: 275px
   position: relative
   width: 100%
+
+  @media screen and (max-width: $break-small)
+    display: none
 
   &.mobile-button
     display: none
 
     @media screen and (max-width: $break-small)
-      margin: 50px auto 0
-      display: block
-
-  @media screen and (max-width: $break-small)
-    display: none
-
+      margin: 20px auto 20px
+      display: grid
 
 .featured-category-products
-  +flexbox
-  +align-items(flex-start)
-  +flex-direction(column)
-  +justify-content(space-between)
-  +flex(1)
+  display: flex
+  align-items: flex-start
+  flex-direction: column
+  justify-content: space-between
+  flex: 1
   position: relative
 
 .featured-category-product
-  +flex-shrink(1)
+  flex-shrink: 1
   height: 60%
   max-height: 400px
   max-width: 400px
@@ -102,7 +95,7 @@
     max-width: none
 
   &.single-featured-product
-    +align-self(center)
+    align-self: center
     height: auto
     max-height: 100%
     max-width: 100%
@@ -115,12 +108,12 @@
     width: 100%
 
   &:nth-child(2)
-    +align-self(flex-end)
-    margin-top: -10%
+    align-self: flex-end
+    margin-top: -25%
     z-index: 1
 
     @media screen and (max-width: $break-small)
-      margin-top: -20%
+      margin-top: -25%
 
     &:hover
       z-index: 3
