--- a/source/stylesheets/product-carousel.sass
+++ b/source/stylesheets/product-carousel.sass
@@ -1,16 +1,16 @@
 \:root
-  --thumbnail-active-color: $link-hover-color
-  --thumb-scroller-color: $text-color
+  --thumbnail-active-color: var(--link-hover-color)
+  --thumb-scroller-color: var(--text-color)
   --thumb-scroller-border-width: 1px
-  --thumb-scroller-border-color: $text-color
-  --thumb-scroller-background: $background-color
+  --thumb-scroller-border-color: var(--text-color)
+  --thumb-scroller-background: var(--background-color)
   --thumb-scroller-background-hover: transparent
-  --current-slide-background: $background-color
-  --current-slide-color: $text-color
+  --current-slide-background: var(--background-color)
+  --current-slide-color: var(--text-color)
   --active-slide-border-width: 2px
   --active-slide-border-width-offset: #{-2px}
-  --arrow-background-color: $background-color
-  --arrow-color: $text-color
+  --arrow-background-color: var(--background-color)
+  --arrow-color: var(--text-color)
   --gap-width: 16px
   --num-images: 5
 
