--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -96,8 +96,9 @@
   margin-top: 60px
   padding: 60px 0
 
-  .related-product
-    width: 33.33%
+.related-products-title
+  font-size: 1.5em
+  margin-bottom: 20px
 
 #instant-checkout-button
   margin-top: 12px
