--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -20,7 +20,8 @@
   --error-text-color: #FFFFFF
 
   --shadow-color: #{'rgba(var(--text-color-rgb), 0.15)'}
-  --menu-box-shadow: 0px 0.4px 0.5px var(--shadow-color), 0px 1.3px 1.5px -0.8px var(--shadow-color), 0px 3.4px 3.8px -1.7px var(--shadow-color), 0px 8.2px 9.2px -2.5px var(--shadow-color)
+
+  --menu-box-shadow: 0px 1px 0.8px var(--shadow-color), 0px 1.6px 1.2px -1.7px var(--shadow-color), 0px 6.1px 4.6px -3.3px var(--shadow-color)
 
   --announcement-background-color: #{'{{ theme.accent_background_color }}'}
   --announcement-text-color: #{'{{ theme.text_color }}'}
@@ -34,6 +35,8 @@
   --border-radius: #{'{{ theme.border_radius }}'}
   --border-radius-sm: 2px
   --spacing-unit: 16px
+  --logo-max-height: #{"{{ theme.logo_image_height | append: 'px' }}"}
+  --logo-max-height-mobile: calc(var(--logo-max-height) / 1.5)
 
 $break-extra-large: 1200px
 $break-large: 945px
