--- a/source/stylesheets/navigation.sass
+++ b/source/stylesheets/navigation.sass
@@ -1,60 +1,99 @@
-
-
-.main-nav
+.header-nav-container
+  background: var(--background-color)
+  padding: 24px 0
   position: relative
+  z-index: 10
+  transition: box-shadow .2s linear
 
-.nav, .horizontal-nav-links
+  @media screen and (max-width: $break-medium)
+    display: none
+
+  &.fixed
+    left: 0
+    position: fixed
+    top: 0
+    width: 100%
+    z-index: 20
+    box-shadow: var(--menu-box-shadow)
+
+.header-pages
+  display: flex
+  column-gap: 40px
+  row-gap: 4px
+  flex-wrap: wrap
+  position: relative
+  list-style: none
   margin: 0
   padding: 0
-  list-style: none
+  text-align: center
+  flex-direction: row
+  justify-content: center
 
-.nav
-  +inline-flex
-  +align-items(center)
-  +justify-content(center)
+  li
+    a
+      color: var(--text-color)
 
-  @media screen and (max-width: $break-small)
-    +justify-content(space-evenly)
-    width: 100%
+      &:hover
+        color: var(--link-hover-color)
 
-.nav-menu-item
-  color: var(--text-color)
-  margin: 0 2px
+.category-nav
   position: relative
 
-  @media screen and (max-width: $break-small)
-    margin: 0
-
-  > a
-    color: var(--text-color)
-    display: block
-    font-size: 25px
-    padding: 5px 25px
+.header-page-link
+  > a, .category-nav-heading
+    display: flex
     position: relative
-    text-decoration: none
+    font-size: 1.25em
+    align-items: center
+    gap: 8px
+    outline-offset: 4px
+    border-radius: 0
 
-    @media screen and (max-width: $break-small)
-      font-size: 20px
-      padding: 2px
+  .category-nav-arrow
+    width: 12px
 
-.horizontal-nav-links
+  @media (hover: hover)
+    a:hover
+      text-decoration: underline
+
+    .category-nav-heading:hover
+      color: var(--link-hover-color)
+
+      .category-nav-page
+        text-underline-offset: 4px
+        text-decoration: underline
+
+.category-dropdown
   +transform-origin(100% 0%)
-  +transform(translateX(-50%) scaleY(0.75))
+  +transform(scaleY(0.75))
   background: var(--background-color)
-  left: 50%
-  line-height: 1.25em
-  min-width: 300px
-  max-height: 500px
+  border-radius: var(--border-radius)
+  border: 1px solid #{"rgba(var(--text-color-rgb),.5)"}
+  left: -20px
+  margin: 0 auto
+  min-width: 250px
   opacity: 0
   overflow-y: scroll
+  padding: 10px 15px
+  font-size: 1rem
   position: absolute
-  top: 100%
-  z-index: 0
+  text-align: left
   visibility: hidden
+  height: auto
+  max-height: 50vh
+  z-index: 3
+  top: calc(100% + 4px)
   scrollbar-width: thin
   scrollbar-color: #{"rgba(var(--text-color-rgb),.5)"} transparent
   scrollbar-gutter: stable
   box-shadow: var(--menu-box-shadow)
+
+  &[aria-hidden="false"]
+    transition: transform 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.1s ease-out
+    +transform(scale(1))
+    transition-delay: 0s
+    opacity: 1
+    visibility: visible
 
   &::-webkit-scrollbar
     height: .375rem
@@ -69,64 +108,72 @@
     background-color: #{"rgba(var(--text-color-rgb),.5)"}
     background-clip: content-box
 
-  @media screen and (max-width: $break-small)
-    +transform(none)
-    +transition(opacity .15s)
-    +transform-origin(0)
-    -webkit-overflow-scrolling: touch
-    left: 0
-    max-height: 100vh
-    max-width: 100%
-    padding-bottom: 140px
-    padding-top: 75px
-    position: fixed
-    top: 0
-    width: 100%
-    height: 100vh
-    z-index: 101
+.dropdown-list
+  list-style: none
+  margin: 0
+  padding: 0
+  position: relative
+  z-index: 4
 
-.horizontal-nav-link
-  position: static
-
-  a
-    +transition(.1s linear all)
-    color: var(--text-color)
+  li
     display: block
-    padding: 20px 10px
-    text-decoration: none
-
-    @media screen and (max-width: $break-small)
-      padding: 20px 60px
-
-  &:hover, &:focus
-    background-color: var(--accent-background-color)
 
     a
-      color: var(--link-hover-color)
-      text-decoration: underline
+      display: block
+      padding: 6px 8px
 
-.nav li:focus > a,
-.nav li:hover > a,
-.nav li:focus-within > a
-  color: var(--link-hover-color)
+      &:hover
+        text-decoration: underline
 
-ul.show-menu
-  +transition(all 0.3s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out)
-  +transform(scale(1) translateY(0) translateX(-50%))
-  visibility: visible
-  opacity: 1
-  transition-delay: 0s
-
-  @media screen and (max-width: $break-small)
-    +transition(opacity .2s ease-out)
-    +transform(none)
-
-.close-nav-menu
-  display: none
-  padding: 10px
+#mobile-navigation
+  background: #{'rgba(var(--background-color-rgb), .8)'}
+  opacity: 0
+  visibility: hidden
+  width: 100%
+  height: calc(100vh - var(--header-bottom-position))
+  height: calc(100svh - var(--header-bottom-position))
+  z-index: 10
+  top: var(--header-bottom-position)
+  left: 0
   position: fixed
-  right: 15px
-  top: 15px
+  transition: opacity .1s ease, visibility .1s ease
+  overscroll-behavior: contain
 
-  @media screen and (max-width: $break-small)
-    display: block
+  @media screen and (max-width: $break-medium)
+    &[aria-hidden="false"]
+      opacity: 1
+      visibility: visible
+
+      .mobile-navigation__wrapper
+        transform: translateX(0)
+
+.mobile-navigation
+  &__wrapper
+    background: var(--background-color)
+    border-top: 1px solid var(--border-color)
+    padding: 16px 20px
+    height: 100%
+    width: 100%
+    transform: translateX(-100%)
+    transition: transform .1s linear
+    overflow-y: scroll
+    padding-bottom: var(--header-bottom-position)
+
+  &__body
+    display: grid
+    gap: 30px
+
+  &__links
+    display: flex
+    flex-direction: column
+    gap: 16px
+
+    li a
+      padding: 4px 0
+      font-size: 1.1em
+
+  &__icons
+    position: relative
+    left: -4px
+    column-gap: 24px
+    justify-content: flex-start
