--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -8,6 +8,12 @@ body
   height: 100%
   min-height: 100vh
 
+  &.overlay-open
+    height: 100vh
+    width: 100vw
+    overflow: hidden
+    overscroll-behavior: none
+
 a.skip-link
   +transition(all .3s)
   background: var(--background-color)
@@ -26,6 +32,7 @@ a.skip-link
 a, a:visited
   color: var(--text-color)
   text-decoration: none
+  text-underline-offset: 4px
 
   &:hover, &:focus
     color: var(--link-hover-color)
@@ -90,7 +97,7 @@ h1
 
 .wrapper
   margin: 0 auto
-  max-width: 1240px
+  max-width: 1200px
   padding: 0 20px
   width: 100%
 
@@ -170,39 +177,11 @@ h1
     margin-left: auto
     display: flex
     align-items: center
-    gap: 24px
+    gap: 4px
+    position: relative
 
-    button, a
-      height: 36px
-      min-width: 36px
-      display: flex
-      align-items: center
-      justify-content: center
-      flex-shrink: 0
-
-      &:hover
-        color: var(--link-hover-color)
-
-    .open-search
-      width: 36px
-
-      svg
-        fill: currentColor
-        height: 20px
-        width: 20px
-
-    svg
-      flex-shrink: 0
-      height: 24px
-      width: 24px
-
-  .cart-link
-    display: flex
-    align-items: center
-    justify-content: center
-    gap: 8px
-    font-weight: bold
-    font-size: 1.25em
+    @media screen and (max-width: $break-medium)
+      right: -6px
 
   .wrapper
     display: flex
@@ -211,13 +190,89 @@ h1
   @media screen and (min-width: $break-medium + 1)
     display: none
 
+.open-search
+  display: flex
+  align-items: center
+  justify-content: center
+  height: 36px
+  width: 36px
+  position: relative
+  left: -6px
+
+  &:hover
+    color: var(--link-hover-color)
+
+  svg
+    flex-shrink: 0
+    fill: currentColor
+    height: 24px
+    width: 24px
+
+    @media screen and (max-width: $break-medium)
+      height: 20px
+      width: 20px
+
+.cart-link
+  border-radius: var(--border-radius)
+  display: flex
+  align-items: center
+  justify-content: center
+  height: 36px
+  padding: 12px
+  gap: 10px
+  font-weight: 500
+  font-size: 1.25em
+  position: relative
+  right: -12px
+
+  @media screen and (max-width: $break-medium)
+    padding: 12px 6px
+    right: 0
+
+  svg
+    flex-shrink: 0
+    height: 24px
+    width: 24px
+
+    @media screen and (max-width: $break-medium)
+      height: 24px
+      width: 24px
+
 .header
   margin-bottom: 60px
 
   @media screen and (max-width: $break-small)
     margin-bottom: 50px
 
-.header-store-link
+.header-columns
+  display: grid
+  grid-template-columns: 1fr auto 1fr
+  align-items: center
+  gap: 20px
+  padding-top: 60px
+  padding-bottom: 20px
+
+  .header-left
+    justify-self: flex-start
+
+  .header-right
+    justify-self: flex-end
+
+  @media screen and (max-width: $break-medium)
+    grid-template-columns: minmax(0, 1fr)
+    padding-top: 20px
+
+    .header-left, .header-right
+      display: none
+
+.store-name.text
+  max-width: 700px
+  width: 100%
+
+  @media screen and (max-width: $break-medium)
+    max-width: 100%
+
+a.header-store-link
   display: inline-flex
   align-items: center
   justify-content: center
@@ -226,21 +281,20 @@ h1
   overflow-wrap: break-word
   word-break: break-word
   color: var(--shop-name-text-color)
-  font-size: 3em
-  margin: 50px auto 40px
+  font-size: 2.75em
+  outline-offset: 4px
 
   @media screen and (max-width: $break-medium)
     font-size: 2.5em
 
   @media screen and (max-width: $break-small)
     font-size: 2.25em
-    margin: 25px auto 20px
 
 .store-logo
   max-height: var(--logo-max-height)
 
-  @media screen and (max-width: $break-small)
-    max-height: var(--logo-max-height-mobile)
+  @media screen and (max-width: $break-medium)
+    max-height: calc(var(--logo-max-height) / 1.2)
 
 header, footer
   +flexbox
