--- a/source/stylesheets/search.sass
+++ b/source/stylesheets/search.sass
@@ -19,6 +19,7 @@
   &__content
     background-color: var(--background-color)
     border-bottom: 1px solid var(--border-color)
+    color: var(--text-color)
     text-align: center
     display: grid
     grid-template-rows: 1fr
@@ -37,6 +38,7 @@
 
   &__form
     display: grid
+    font-weight: 500
     grid-template-columns: 1fr
     column-gap: 16px
     row-gap: 8px
@@ -55,6 +57,8 @@
     padding: 8px
 
   &__submit
+    color: var(--button-text-color)
+    background: var(--button-background-color)
     grid-row: 2/2
     grid-column: 2/2
     padding: 0
@@ -63,16 +67,13 @@
     display: flex
     align-items: center
     justify-content: center
-    border: 2px solid var(--button-text-color)
-
 
     &-icon
       height: 20px
       width: 20px
 
-    &:hover
-      border: 2px solid var(--link-hover-color)
-      color: var(--link-hover-color)
+    &:hover, &:focus
+      background: var(--button-hover-background-color)
 
   &__close
     display: flex
@@ -84,13 +85,14 @@
     width: 48px
     height: 48px
     margin-left: auto
-
-    &:hover
-      color: var(--link-hover-color)
+    color: var(--text-color)
 
     &-icon
       height: 20px
       width: 20px
+
+    &:hover, &:focus
+      color: var(--link-hover-color)
 
   &__label
     text-align: left
