--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -104,11 +104,9 @@ h1
 #home .content .wrapper
   padding: 0
 
-#product .content .wrapper
-  padding: 0 20px
-
-#cart .content .wrapper, #contact .content .wrapper
-  padding: 0 20px
+#product, #cart, #contact
+  .content .wrapper
+    padding: 0 20px
 
 .custom-content
   margin: 0 auto
