--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -129,3 +129,6 @@ a.featured-category-button
 
 a.button.all-products-button
   margin-top: 48px
+
+  @media screen and (max-width: $break-small)
+    max-width: calc(100% - var(--spacing-unit) * 2)
