feat: add XL and XXL logo max size options
Also changes the medium breakpoint logo size to be same max logo height instead of 20% smaller

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -295,7 +295,7 @@ a.header-store-link
   max-height: var(--logo-max-height)
 
   @media screen and (max-width: $break-medium)
-    max-height: calc(var(--logo-max-height) / 1.2)
+    max-height: var(--logo-max-height)
 
 header, footer
   +flexbox
