--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -3,7 +3,7 @@
 
   --shop-name-text-color: #{'{{ theme.shop_name_text_color }}'}
 
-  --text-color: #{'{{ theme.text_color }}'}
+  --primary-text-color: #{'{{ theme.primary_text_color }}'}
   --link-hover-color: #{'{{ theme.link_hover_color }}'}
 
   --accent-background-color: #{'{{ theme.accent_background_color }}'}
@@ -24,7 +24,7 @@
   --menu-box-shadow: 0px 1px 0.8px var(--shadow-color), 0px 1.6px 1.2px -1.7px var(--shadow-color), 0px 6.1px 4.6px -3.3px var(--shadow-color)
 
   --announcement-background-color: #{'{{ theme.accent_background_color }}'}
-  --announcement-text-color: #{'{{ theme.text_color }}'}
+  --announcement-text-color: #{'{{ theme.primary_text_color }}'}
 
   --product-status-background-color: var(--button-background-color)
   --product-status-text-color: var(--button-text-color)
