fix: switch to `primary-text-color` vs old `text-color`

--- a/source/stylesheets/announcement.sass
+++ b/source/stylesheets/announcement.sass
@@ -1,7 +1,7 @@
 .announcement-message
   align-items: center
   background-color: var(--accent-background-color)
-  color: var(--text-color)
+  color: var(--primary-text-color)
   display: none
   font-size: 1rem
   justify-content: center
@@ -20,7 +20,7 @@
 
   &__close-button
     align-items: center
-    color: var(--text-color)
+    color: var(--primary-text-color)
     display: flex
     height: 32px
     justify-content: center
