--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -8,7 +8,7 @@
 
   --accent-background-color: #{'{{ theme.accent_background_color }}'}
 
-  --border-color: #{'rgba(var(--text-color-rgb), .4)'}
+  --border-color: #{'rgba(var(--primary-text-color-rgb), .4)'}
 
   --welcome-header-text-color: #{'{{ theme.welcome_header_text_color }}'}
 
@@ -19,7 +19,7 @@
   --error-background-color: #950f1e
   --error-text-color: #FFFFFF
 
-  --shadow-color: #{'rgba(var(--text-color-rgb), 0.15)'}
+  --shadow-color: #{'rgba(var(--primary-text-color-rgb), 0.15)'}
 
   --menu-box-shadow: 0px 1px 0.8px var(--shadow-color), 0px 1.6px 1.2px -1.7px var(--shadow-color), 0px 6.1px 4.6px -3.3px var(--shadow-color)
 
