--- a/source/stylesheets/contact.sass
+++ b/source/stylesheets/contact.sass
@@ -17,7 +17,7 @@
 input, textarea
   border-radius: var(--border-radius)
   background: var(--background-color)
-  border: 1px solid var(--text-color)
+  border: 1px solid var(--primary-text-color)
   font-weight: normal
   width: 100%
   font-size: 1rem
