--- a/source/stylesheets/navigation.sass
+++ b/source/stylesheets/navigation.sass
@@ -23,7 +23,7 @@
 
   li
     a
-      color: var(--text-color)
+      color: var(--primary-text-color)
 
       &:hover
         color: var(--link-hover-color)
@@ -60,7 +60,7 @@
   +transform(scaleY(0.75))
   background: var(--background-color)
   border-radius: var(--border-radius)
-  border: 1px solid #{"rgba(var(--text-color-rgb),.5)"}
+  border: 1px solid #{"rgba(var(--primary-text-color-rgb),.5)"}
   left: -20px
   margin: 0 auto
   min-width: 250px
@@ -76,7 +76,7 @@
   z-index: 3
   top: calc(100% + 4px)
   scrollbar-width: thin
-  scrollbar-color: #{"rgba(var(--text-color-rgb),.5)"} transparent
+  scrollbar-color: #{"rgba(var(--primary-text-color-rgb),.5)"} transparent
   scrollbar-gutter: stable
   box-shadow: var(--menu-box-shadow)
 
@@ -97,7 +97,7 @@
   &::-webkit-scrollbar-thumb
     border-radius: .375rem
     border: 3px solid transparent
-    background-color: #{"rgba(var(--text-color-rgb),.5)"}
+    background-color: #{"rgba(var(--primary-text-color-rgb),.5)"}
     background-clip: content-box
 
 .dropdown-list
