--- a/source/stylesheets/search.sass
+++ b/source/stylesheets/search.sass
@@ -19,7 +19,7 @@
   &__content
     background-color: var(--background-color)
     border-bottom: 1px solid var(--border-color)
-    color: var(--text-color)
+    color: var(--primary-text-color)
     text-align: center
     display: grid
     grid-template-rows: 1fr
@@ -49,7 +49,7 @@
     grid-column: 1/1
     border-radius: var(--border-radius)
     background: var(--background-color)
-    border: 1px solid var(--text-color)
+    border: 1px solid var(--primary-text-color)
     font-weight: normal
     width: 100%
     font-size: 1em
@@ -85,7 +85,7 @@
     width: 48px
     height: 48px
     margin-left: auto
-    color: var(--text-color)
+    color: var(--primary-text-color)
 
     &-icon
       height: 20px
